# CS-370-Mesh-Processing

./: README.md
isometric-deformation/: README.md
isometric-deformation/ext/libigl/cmake/: LibiglDownloadExternal.cmake
isometric-deformation/ext/libigl/include/igl/opengl/glfw/imgui/: ImGuiMenu.cpp
isometric-deformation/ext/pardiso/: pardiso.lic
isometric-deformation/src/: main.cpp
isometric-deformation/src/Optimization/Solvers/Pardiso/: PardisoSolver.cpp  PardisoSolver.h
killing field/: README.md
killing field/src/OpenMesh/Apps/: CMakeLists.txt
killing field/src/OpenMesh/Apps/curvature_estimation/: main.cc
killing field/src/OpenMesh/Apps/demo_/: CMakeCache.txt  main.cc  main2.ccbackup
killing field/src/OpenMesh/Apps/demo_global/: main.cc
src/OpenMesh/Apps/curvature_estimation/: CMakeLists.txt
src/OpenMesh/Apps/curvature_estimation/cmake/: FindLIBIGL.cmake
src/OpenMesh/Apps/demo_/: CMakeLists.txt
src/OpenMesh/Apps/demo_/cmake/: FindLIBIGL.cmake
src/OpenMesh/Apps/demo_global/: CMakeLists.txt
src/OpenMesh/Apps/domo_cube/: main.cc
